tests/ui/typst_requires_feature/plot_typst.rs
use ruviz::prelude::*;

fn main() {
    let _ = Plot::new().typst(true);
}
